--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     margin: 0;
-    background: #5f3dc4;
+    background-image: linear-gradient(rgb(0, 30, 199), rgb(135, 7, 181));
     display: flex;
     align-items: center;
     justify-content: center;
